--- a/week4/index.html
+++ b/week4/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+<body style="background"
   <head>
+    <link
+      rel="stylesheet"
+      href="style.css"
   </head>
   <body>
-    <h1><font color= "deep pink">NGINA VALDEZ</font></h1>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <h1><font color= "deep pink">NGINA VALDEZ</font></h1><link href="https://fonts.googleapis.com/css?family=Snowburst+One&display=swap" rel="stylesheet">
     <p>
-      <img src= "ngina.jpg" height= "200px" width = "200px">
+      <img src= "ngina.jpg" height= "200px" width = "200px" border= "5">
     </p>
     <p>
       <strong>Full Name:</strong><a href="https://instagram.com/vivavaldez"> Ngina Surray Valdez</a>
@@ -35,7 +40,7 @@
       <strong>Hobbies:</strong>
     <ul>
       <li>Piano</li>
-      <li><a href="https://www.instagram.com/paterolito"> Art</a></li>
+      <li><a href="https://www.instagram.com/paterolito"> Art</a><em> (Check out her artwork)</em></li>
       <li>Designing Mailboxes</li>
     </ul>
     <p>
@@ -66,8 +71,8 @@
     </p>
       <strong>Favorite Movies:</strong>
     <ul>
-      <li>US</li>
-      <li>Endgame</li>
+      <li>US</li><img src= "us.jpg" height= "200px" width = "150px">
+      <li>Endgame</li><img src= "endgame.jpg" height= "200px" width = "150px">
     </ul>
     <p>
       <strong>Fun Fact:</strong> Has 8 piercings
