--- a/week4/index.html
+++ b/week4/index.html
@@ -2,13 +2,12 @@
 <html>
 <body style="background"
   <head>
-    <link
-      rel="stylesheet"
-      href="style.css"
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1><div id="fontz" onclick = "changeFontz()">NGINA VALDEZ</div><h1>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <h1><font color= "deep pink">NGINA VALDEZ</font></h1><link href="https://fonts.googleapis.com/css?family=Snowburst+One&display=swap" rel="stylesheet">
+    <!-- <h1><font color= "deep pink">NGINA VALDEZ</font></h1><link href="https://fonts.googleapis.com/css?family=Snowburst+One&display=swap" rel="stylesheet"> -->
     <p>
       <img src= "ngina.jpg" height= "200px" width = "200px" border= "5">
     </p>
@@ -76,5 +75,7 @@
     </ul>
     <p>
       <strong>Fun Fact:</strong> Has 8 piercings
+
+    <script src="index.js"></script>
   </body>
 </html>
