--- a/week4/helloworld.html
+++ b/week4/helloworld.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link href="https://fonts.googleapis.com/css?family=Bonbon|Bungee+Outline|Butcherman|Butterfly+Kids&display=swap" rel="stylesheet">
   </head>
-  <body onclick="colorfulBackground()">
+  <body>
 
 
-    <h1>Ngina is <div id="adjective" onclick = "changeAdj()">Google</div><h1>
+    <h1>Ngina is <div id="fontz" onclick ="fontChange()"> Random! </div><h1>
 
     <script src= "helloworld.js"></script>
   </body>
