--- a/week4/index.html
+++ b/week4/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><div id="fontz" onclick = "changeFontz()">NGINA VALDEZ</div><h1>
+    <div>
+      <h2>
+        Name:<h1><div id="specialfont">NGINA VALDEZ</div><h1>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <!-- <h1><font color= "deep pink">NGINA VALDEZ</font></h1><link href="https://fonts.googleapis.com/css?family=Snowburst+One&display=swap" rel="stylesheet"> -->
     <p>
