--- a/week4/index.html
+++ b/week4/index.html
@@ -5,11 +5,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
-      <h2>
-        Name:<h1><div id="specialfont">NGINA VALDEZ</div><h1>
+    <h1><div id= "fontz"><NGINA VALDEZ></div></h1>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <!-- <h1><font color= "deep pink">NGINA VALDEZ</font></h1><link href="https://fonts.googleapis.com/css?family=Snowburst+One&display=swap" rel="stylesheet"> -->
+    <h1><font color= "deep pink">NGINA VALDEZ</font></h1><link href="https://fonts.googleapis.com/css?family=Snowburst+One&display=swap" rel="stylesheet">
     <p>
       <img src= "ngina.jpg" height= "200px" width = "200px" border= "5">
     </p>
